Fixed missing background image in css

--- a/styles/backgrounds.css
+++ b/styles/backgrounds.css
@@ -25,7 +25,7 @@
   top: -50%;
   left: -50%;
   z-index: -1;
-  background-image: url(/images/3d-shape/3d-shape-single-full-opacity.png);
+  background-image: url(/images/icons/3d-shape-single-full-opacity.png);
   background-repeat: space round;
   background-position: left top;
 }
